[package]
name = "supports-unicode"
version = "1.0.3-alpha.0"
authors = ["Kat Marchán <kzm@zkat.tech>"]
description = "Detects whether a terminal supports unicode."
categories = ["command-line-interface"]
repository = "https://github.com/zkat/supports-unicode"
documentation = "https://docs.rs/supports-unicode"
license = "Apache-2.0"
readme = "README.md"
edition = "2018"

[dependencies]
is-terminal = "0.4.1"
